--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This little package allows you to define the stylesheet for a cytoscape.js graph in native css format (instead of the funky JSON/CSS mixture that cytoscape.js asks for (defined here: http://cytoscape.github.io/cytoscape.js/#style).  You write the style in CSS, then run the parser to generate the JSON.
+This little package allows you to define the stylesheet for a cytoscape.js graph in native css format (instead of the funky JSON/CSS mixture that cytoscape.js asks for - see http://cytoscape.github.io/cytoscape.js/#style).  You write the style in CSS, then run the parser to generate the JSON.
 
 The file "cytoscapecssparser.py" should be placed in the same directory as a file called "cytoscape.css", which should contain valid CSS rules for styling a cytoscape.js visualization.  It will generate a json file called "cytoscapestyle.json" in the same directory.  
 
